conf/test/full/full-route-1.yaml
---
apiVersion: 'proxy.otoroshi.io/v1alpha1'
kind: 'Route'
metadata:
  name: 'route_558b494d5-12e0-4dec-97ce-8d8860b38072'
spec:
  _loc:
    tenant: 'default'
    teams:
      - 'default'
  id: 'route_558b494d5-12e0-4dec-97ce-8d8860b38072'
  name: 'New route'
  description: 'A new route'
  tags: []
  metadata: {}
  enabled: true
  debug_flow: false
  export_reporting: false
  capture: false
  groups:
    - 'default'
  frontend:
    domains:
      - 'new-route.oto.tools'
    strip_path: true
    exact: false
    headers: {}
    query: {}
    methods: []
  backend:
    targets:
      - id: 'target_1'
        hostname: 'mirror.otoroshi.io'
        port: 443
        tls: true
        weight: 1
        predicate:
          type: 'AlwaysMatch'
        protocol: 'HTTP/1.1'
        ip_address: null
        tls_config:
          certs: []
          trusted_certs: []
          enabled: false
          loose: false
          trust_all: false
    root: '/'
    rewrite: false
    load_balancing:
      type: 'RoundRobin'
    client:
      retries: 1
      max_errors: 20
      retry_initial_delay: 50
      backoff_factor: 2
      call_timeout: 30000
      call_and_stream_timeout: 120000
      connection_timeout: 10000
      idle_timeout: 60000
      global_timeout: 30000
      sample_interval: 2000
      proxy: {}
      custom_timeouts: []
      cache_connection_settings:
        enabled: false
        queue_size: 2048
    health_check: null
  backend_ref: null
  plugins:
    - enabled: true
      debug: false
      plugin: 'cp:otoroshi.next.plugins.OverrideHost'
      include: []
      exclude: []
      config: {}
      plugin_index:
        transform_request: 0
